# BadUSB

./: .gitignore  CMakeLists.txt  Makefile  README.md  gcc-arm-none-eabi.cmake
inc/: main.h
lib/CMSIS/Device/ST/STM32F4xx/Include/: stm32f4xx.h
lib/STM32_USB_Device_Library/Class/HID/Inc/: usbd_hid.h
lib/STM32_USB_Device_Library/Class/HID/Src/: usbd_hid.c
lib/STM32_USB_Device_Library/Class/MSC/Src/: usbd_msc.c
lib/STM32_USB_Device_Library/Core/Src/: usbd_core.c
resources/kicad/: #auto_saved_files#  BadUSB.bak  BadUSB.kicad_pcb  BadUSB.kicad_pcb-bak  BadUSB.kicad_prl  BadUSB.kicad_pro  BadUSB.lib  BadUSB.net  BadUSB.sch  _autosave-BadUSB.sch  fp-lib-table  info.txt  sym-lib-table
resources/kicad/GBR_DRL/: Pendrive_v1-B.Cu.gbr  Pendrive_v1-B.Mask.gbr  Pendrive_v1-B.Paste.gbr  Pendrive_v1-B.SilkS.gbr  Pendrive_v1-Dwgs.User.gbr  Pendrive_v1-Edge.Cuts.gbr  Pendrive_v1-F.Cu.gbr  Pendrive_v1-F.Mask.gbr  Pendrive_v1-F.Paste.gbr  Pendrive_v1-F.SilkS.gbr  Pendrive_v1-NPTH-drl_map.ps  Pendrive_v1-NPTH.drl  Pendrive_v1-PTH-drl_map.ps  Pendrive_v1-PTH.drl  Pendrive_v1-drl.rpt
src/: main.c  main.h  stm32f4xx_hal_msp.c
src/config/: stm32f4xx_hal_conf.h  stm32f4xx_hal_msp.c  stm32f4xx_it.c  stm32f4xx_it.h  syscalls.c  sysmem.c  system_stm32f4xx.c  usbd_conf.c  usbd_conf.h
src/sdio/: fatfs.c  fatfs.h  file_handling.c  file_handling.h
src/usb/: usb_device.c  usb_device.h  usb_keyboard.h  usbd_desc.c  usbd_desc.h
src/usb/common/: usb_common.c  usb_common.h
src/usb/hid/: usb_hid_device.c  usb_hid_device.h  usb_keyboard.h  usbd_hid_desc.c  usbd_hid_desc.h
src/usb/msc/: usb_msc_device.c  usb_msc_device.h  usbd_msc_desc.c  usbd_msc_desc.h  usbd_storage_if.c  usbd_storage_if.h
test/: 1984.txt  inwokacja.txt  inwokacja2.txt  lorem_ipsum.txt  lorem_ipsum2.txt  lorem_ipsum3.txt  lorem_ipsum4.txt  lorem_ipsum_2000.txt  lorem_ipsum_500.txt  lorem_ipsum_5000.txt  reverseshell_payload.txt  rickroll_payload.txt  rickroll_win_payload.txt  scripts.txt  speed.py  speed2.py  stats.py
test/results/: lorem_ipsum_1000.txt  lorem_ipsum_10000.txt  special_signs.txt
